kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grav-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grav
  template:
    metadata:
      labels:
        app: grav
    spec:
      containers:
        - name: grav
          image: eu.gcr.io/uctoservis/grav-uctoservis:1.0.0
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 8080
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "300Mi"
              cpu: "10m"
            limits:
              memory: "400Mi"
              cpu: "100m"
          volumeMounts:
            - name: user-data
              mountPath: /var/www/html/user
              #TODO probes
              #TODO metrics
      volumes:
        - name: user-data
          persistentVolumeClaim:
            claimName: user-data-pvc
