kubernetes/grav-uctoservis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grav-uctoservis-svc
spec:
  type: NodePort
  selector:
    app: grav
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
