kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uctoservis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "uctoservis-web"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: grav-uctoservis-svc
              servicePort: 8080
